# raftcpp

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  raft.cpp  raft.hpp  random_interval_timer.hpp
src/: main.cpp  raft.cpp  raft.hpp
src/pb/: raftcpp.grpc.pb.cc  raftcpp.grpc.pb.h  raftcpp.pb.cc  raftcpp.pb.h  raftcpp.proto
src/raft/: raft_client.hpp  raft_node.hpp  raft_store.hpp  raft_timer.hpp
